--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "danielpickett-react-components",
-  "version": "0.1.13",
+  "version": "0.0.1",
   "module": "dist/index.js",
   "private": false,
+  "license": "MIT",
   "types": "dist/index.d.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
